<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.jcrontab</groupId>
	<artifactId>jcrontab</artifactId>
	<name>jcrontab</name>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<description>Lightweight embeddable UNIX crontab scheduler for Java</description>

	<developers>
		<developer>
			<id>iolalla</id>
			<email>iolalla@gmail.com</email>
		</developer>
		<developer>
			<id>vipup</id>
			<organization>Monster AG</organization>
			<email>vipup@sf.net</email>
			<url>https://sourceforge.net/users/vipup</url>
		</developer>
		<developer>
			<name>Hilary Catherall</name>
			<url>http://www.cythrawl.org/professional</url>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<slf4j.version>2.0.12</slf4j.version>
		<log4j.version>2.23.1</log4j.version>
		<junit-jupiter.version>5.10.2</junit-jupiter.version>
	</properties>

	<dependencies>
		<!-- Logging facade -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- Log4j 2 optional support for Log4JLogger -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
			<optional>true</optional>
		</dependency>

		<!-- Servlet API for WAR/Servlet deployment -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.jcrontab.Jcrontab</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
			</plugin>
		</plugins>
	</build>
</project>